Fix Bug 258551 - KMailCVT leaks lots of memory when importing maildir

Akonadi::ItemCreateJob was never delete during importing so memory used increase a lot.
(for example during importing 2 Go it takes 2.5Go virtual memory before, after my fix it takes just 400Mo)
Too bad that it's will not in 4.8.1
FIXED-IN: 4.8.2
BUG: 258551
(cherry picked from commit eafff41025775a8a2c15cd3f26233bd8d50cb277)

If we can't update kdepim source please add this patch to your source please.

CCMAIL: kde-packager@kde.org